Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99323

[REG: 5.14.2 -> 5.15.0] Posted events get stuck when QCoreApplication::processEvents with QEventLoop::WaitForMoreEvents is used

XMLWordPrintable

    • Windows
    • d671bab0e3 (qt/qtbase/dev) d671bab0e3 (qt/tqtc-qtbase/dev) eb1103c02a (qt/qtbase/6.3) eb1103c02a (qt/tqtc-qtbase/6.3) 40c4b2ae44 (qt/qtbase/6.2) 40c4b2ae44 (qt/tqtc-qtbase/6.2) 07d065cbbe (qt/tqtc-qtbase/5.15)

      Posted events get stuck when QCoreApplication::processEvents with QEventLoop::WaitForMoreEvents is used.

      Way to reproduce:

      Build and Run the attached example with affected Qt version (Qt 5.15.7 or Qt 6.2.2 for example)

      The posted events seem to get stuck.

      The last known good was Qt 5.14.2 where the event loop did not get stuck.

        1. qtbug99323.zip
          0.8 kB
          Tuukka Kettunen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            foxxx Tuukka Kettunen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: